# Tracker_PyAnalysis

./: .gitignore  README.md  alignment_fitter.py  alignment_plot_temp.py  allpix_to_eudaq_read.py  allpix_to_eudaq_write.py  analyze_triggers.py  bremss.py  candidate.py  chi2_fit.py  clusters.py  compare_runs.py  config.py  counters.py  errors.py  eudaq_reader_test.py  evtdisp.py  fit_490_5_bkg.py  generator.py  generator_beamonly.py  gun.py  hists.py  hough_seeder.py  lookup_table.py  multiproc_analyzer.py  multiproc_analyzer_new.py  noise.py  noise_analyzer.py  objects.py  particlegun_to_eudaq_write.py  pickle_analyzer.py  pixels.py  plot_lookup2D_matplotlib_gif.py  plot_lookup_matplotlib.py  plot_lookup_matplotlib_gif.py  plot_occ.py  plot_quads_impact.py  plot_residuals_pulls.py  plot_sigbkg.py  plots.py  (+9 more)
DetectorEvent/20240705/: CMakeLists.txt  DetectorEvent.h  LinkDef.h  clean.sh
E320_matlab_pvs_to_python/: E320_matlab_pvs_to_python.py  README
E320_pickle_pvs_to_python/: E320_pickle_pvs_to_python.py
conf/: config_beam_data_E320_prototype_tracker_Feb2025.txt  config_beam_data_E320_prototype_tracker_Feb2025_no_global_alignment.txt  config_beam_data_E320_prototype_tracker_May2025_17-19.txt  config_beam_fakemc_E320_prototype_tracker.txt  config_cosmics_data_E320_full_prototype_tracker_AugX.txt  config_cosmics_data_E320_full_prototype_tracker_JulX.txt  config_cosmics_data_E320_full_prototype_tracker_OctX.txt  config_cosmics_data_E320_prototype_tracker_Jul7.txt  config_cosmics_data_newtelescope.txt  config_cosmics_data_vbb0.txt  config_cosmics_data_vbb0_run730.txt  (+23 more)
(+15 files in other folders)
